# labs_IR

./: .gitignore  CMakeLists.txt  README.md  parser_wiki.ipynb
data/processed/: stem_vocabulary.txt  stems.txt  vocabulary.txt  zipf_statistics.txt
scripts/: build.sh  rebuild_index.sh  run_tests.sh  simple_car_search.sh
src/common/: utils.cpp  utils.h
src/crawler/: crawler.cpp  crawler.h  main.cpp
src/index/: inverted_index.cpp  inverted_index.h  main.cpp
src/search/: bool_search.cpp  bool_search.h  main.cpp
src/stemmer/: main.cpp  stemmer.cpp  stemmer.h
src/tokenizer/: main.cpp  tokenizer.cpp  tokenizer.h
src/zipf/: main.cpp  zipf_analyzer.cpp  zipf_analyzer.h
tests/: test_stemmer.cpp  test_tokenizer.cpp
